kube/thub.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: thub
  annotations:
    kapp.k14s.io/change-rule: "upsert after upserting lnpay/lnd"
spec:
  selector:
    matchLabels:
      app: lnpay
      name: thub
  template:
    metadata:
      labels:
        app: lnpay
        name: thub
    spec:
      containers:
        - name: thub
          image: apotdevin/thunderhub:v0.12.7
          volumeMounts:
            - mountPath: /tls
              name: tls
              readOnly: true
            - mountPath: /macaroons/admin/
              name: admin-macaroon
            - mountPath: /config
              name: config
          ports:
            - containerPort: 3000
              protocol: TCP
      volumes:
        - name: tls
          secret:
            secretName: lnd-secret
        - name: config
          configMap:
            name: thub-accounts-config
        - name: admin-macaroon
          persistentVolumeClaim:
            claimName: admin-macaroon

---

apiVersion: v1
kind: Service
metadata:
  name: thub
  labels:
    name: thub
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    name: thub
