kube/access.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: lnpay-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/tls-acme: "true"
    external-dns.alpha.kubernetes.io/ttl: "5m"
spec:
  tls:
    - hosts:
        - api.${DNS_PREFIX}lnpay.semtexzv.com
      secretName: tls-api
    - hosts:
        - thub.${DNS_PREFIX}lnpay.semtexzv.com
        - term.${DNS_PREFIX}lnpay.semtexzv.com
      secretName: tls-admin
  rules:
    - host: api.${DNS_PREFIX}lnpay.semtexzv.com
      http:
        paths:
          - path: /api/(.*)
            backend:
              serviceName: lnpay
              servicePort: 8080
          - path: /(.*)
            backend:
              serviceName: rontend-cdn
              servicePort: 443

    - host: term.${DNS_PREFIX}lnpay.semtexzv.com
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: literm
              servicePort: 8080

    - host: thub.${DNS_PREFIX}lnpay.semtexzv.com
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: thub
              servicePort: 3000
